# knowledge-assistant

./: .env.example  .gitignore  Makefile  README.md  package.json  pnpm-lock.yaml  turbo.json
apps/api/: Dockerfile  README.md  pyproject.toml
apps/api/app/: __init__.py  main.py
apps/api/app/agents/: __init__.py  base.py  orchestrator.py
apps/api/app/api/: __init__.py  websocket.py
apps/api/app/api/endpoints/: chat.py  data_sources.py  health.py
apps/api/app/core/: config.py  llm_factory.py
apps/api/app/models/: __init__.py  schemas.py
apps/api/app/tools/: __init__.py
apps/web/: .env.local.example  Dockerfile.dev  next.config.js  package.json  tailwind.config.js  tsconfig.json
apps/web/app/: layout.tsx  page.tsx
apps/web/app/chat/: page.tsx
apps/web/app/data-sources/: page.tsx
docker/: docker-compose.dev.yml  docker-compose.yml
docker/init-db/: 01-init.sql
scripts/: dev.sh  setup.sh
